--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
-DB_LOCALHOST_CONN = mongodb://localhost:27017/alibaba
-PORT = 8000
-JWT_SECRETE = uniqueone
+MONGO_DB_URL=mongodb://localhost:27017/alibaba
+PORT=8000
+JWT_SECRET=uniqueone
+WHITE_LISTED_ORGIN=http://localhost:5173
