--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 MONGO_DB_URL=mongodb://localhost:27017/alibaba
 PORT=8000
 JWT_SECRET=uniqueone
-WHITE_LISTED_ORGIN=http://localhost:5173
+WHITE_LISTED_ORGIN=https://hoisting-beta.vercel.app/
