--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-MONGO_DB_URL=mongodb://localhost:27017/alibaba
+MONGO_DB_URL=mongodb+srv://sp:123@cluster0.oudhlcn.mongodb.net/?retryWrites=true&w=majority
 PORT=8000
 JWT_SECRET=uniqueone
 WHITE_LISTED_ORGIN=https://hoisting-beta.vercel.app/
